--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,3 +2,4 @@
 <br>
 <a href="/signup">:signup</a>
 
+<p><font size="1" color="red"><a href="tel:+1800APLCARE"><font color="red">EMERGENCY</font></a></p>
