--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -4,9 +4,7 @@
     <p>Username: <input type="text" name="username"></input></p>
     <p>Email: <input type="text" name="email"></p>
     <p>Password: <input type="password" name="password"></input></p>
-    <p>Device: <input type="device" name="device"></input></p>
 
     <input type="submit" value="Submit"></input>
-<h2><a href="tel:+1800MYAPPLE">Buy >EMERGENCY</a></h2>
-
+<p><font size="1" color="red"><a href="tel:+1800APLCARE"><font color="red">EMERGENCY</font></a></p>
 </form>
