--- a/app/views/comments/create_comment.erb
+++ b/app/views/comments/create_comment.erb
@@ -1,8 +1,9 @@
 <h1>we're listening 👂</h1>
 <form action="/comments" method="POST">
-    <p>Device: <input type="device" name="device"></input></p>
-    <textarea name="content" id="content" rows="4" cols="50"></textarea>
 
+    <textarea name="content" id="content" rows="4" cols="50"></textarea>
+    
 <input type="submit" name="submit" value="submit"/>
 
 </form>
+<p><font size="1" color="red"><a href="tel:+1800APLCARE"><font color="red">EMERGENCY</font></a></p>
