--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-<h3>Account Setup</h3>
+<h1>let's get you an account</h1>
 
 <form action="/signup" method="post">
     <p>Username: <input type="text" name="username"></input></p>
