test and view updates

--- a/app/views/comments/comments.erb
+++ b/app/views/comments/comments.erb
@@ -1,6 +1,5 @@
-<h1>here's your ledger 📒</h1>
-<a href="/comments/new">Start</a>
-<a href="/logout">Logout</a>
+<h1>service ledger 📒</h1>
+<a href="/comments/new">✍🏻Start</a>   <a href="/logout">Logout</a>
 
 <ul>
     <% @comments.each do |comment| %>
