--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
-<a href="/sessions/login">:login</a>
+<a href="/sessions/login">login</a>
 <br>
-<a href="/signup">:signup</a>
+<a href="/signup">signup</a>
 
-<p><font size="1" color="red"><a href="tel:+1800APLCARE"><font color="red">EMERGENCY</font></a></p>
+<p><font size="1" color="red"><a href="tel:+1800APLCARE"><font color="red">🚨</font></a></p>
