--- a/app/views/posts/create_post.erb
+++ b/app/views/posts/create_post.erb
@@ -1,12 +1,16 @@
-<body style="background-color:#fbda00;">
-<h1>c r e a t e 👩🏽‍🎨</h1>
-i s s u e s
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" type=”text/css” href=”/style.css”">
+<link rel="stylesheet" href="/style.css">
+</head>
 
-<form action="/posts" method="POST">
-
-<textarea name="content" id="content" rows="4" cols="50"></textarea>
-
-<input type="submit" name="submit" value="submit"/>
-
-</form>
+<body>
+    <div class="container">
+        <h1>c r e a t e 👩🏽‍🎨</h1>
+            <form action="/posts" method="POST">
+            <textarea name="content" id="content" rows="4" cols="50"></textarea>
+            <input type="submit" name="submit" value="submit"/>
+            </form>
+    </div>
 </body>
+
