--- a/app/views/posts/posts.erb
+++ b/app/views/posts/posts.erb
@@ -1,19 +1,21 @@
-<body style="background-color:#fbda00;">
-    <h1>i s s u e s ☔︎ </h1>
-    <a href="/posts/new">CREATE</a>    <a href="/logout">LOGOUT</a>
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" type=”text/css” href=”/style.css”">
+<link rel="stylesheet" href="/style.css">
+</head>
 
-    <ul>
-        <% @posts.each do |post| %>
-        <li>
-<<<<<<< HEAD
-        <a href="/posts/<%= post.id %>"><%= post.content %></a>
-=======
-        <a href="/posts/<%= post.content %>"><%= post.id %></a>
->>>>>>> fa78820d2fa12007ac2098212e63607e286fad2e
-        </li>
-        <% end %>
-    </ul>
+<body>
+    <div class="container">
+        <h1>i s s u e s ☔︎ </h1>
+            <a href="/posts/new">CREATE</a>    <a href="/logout">LOGOUT</a>
 
+            <ul>
+                <% @posts.each do |post| %>
+                <li>
+                    <a href="/posts/<%= post.id %>"><%= post.content %></a>
+                    <a href="/posts/<%= post.content %>"><%= post.id %></a>
+                </li>
+                <% end %>
+            </ul>
+    </div>
 </body>
-
-
