--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,20 @@
-<body style="background-color:#fbda00;">
-
-
-<h1>s i g n u p</h1>
-
-<form action="/users" method="POST">
-<p>
-e m a i l<br>
-<label for="email>"Email:</label>
-<input type="text" name="email" id="email"/>
-</p>
-<p>
-p a s s w o r d<br>
-<label for="password>"Password:</label>
-<input type="password" name="password" id="password"/>
-</p>
-
-<input type="submit"/>
-</form>
-
+<!DOCTYPE html>
+<html>
+<link rel="stylesheet" type=”text/css” href=”/style.css”">
+<link rel="stylesheet" href="/style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>s i g n u p</h1>
+            <form action="/users" method="POST">
+            <p>e m a i l<br>
+                <label for="email>"Email:</label>
+                <input type="text" name="email" id="email"/>
+            </p><p>p a s s w o r d<br>
+                <label for="password>"Password:</label>
+                <input type="password" name="password" id="password"/>
+            </p>
+                <input type="submit"/>
+            </form>
+    </div>
 </body>
